--- a/view/login.html
+++ b/view/login.html
@@ -19,7 +19,7 @@
   <div class="container mx-auto h-full flex flex-1 justify-center items-center">
     <div class="w-full max-w-lg">
       <div class="leading-loose">
-        <form class="max-w-xl m-4 p-10 bg-white rounded shadow-xl" action="../controller/Proses.php">
+        <form class="max-w-xl m-4 p-10 bg-white rounded shadow-xl" action="../controller/Proses.php" method="POST">
           <p class="text-gray-800 font-medium text-center text-lg font-bold">Login</p>
           <div class="">
             <label class="block text-sm text-gray-00" for="username">Username</label>
@@ -30,7 +30,7 @@
             <input class="w-full px-5  py-1 text-gray-700 bg-gray-200 rounded" id="password" name="password" type="password" required="" placeholder="*******" aria-label="password">
           </div>
           <div class="mt-4 items-center justify-between">
-            <button class="px-4 py-1 text-white font-light tracking-wider bg-gray-900 rounded" type="submit">Login</button>
+            <button class="px-4 py-1 text-white font-light tracking-wider bg-gray-900 rounded" type="submit" value="login">Login</button>
           </div>
         </form>
       </div>
