Penambahan view form & view table
Index.html diubah bagian nama2

--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./dist/styles.css">
     <link rel="stylesheet" href="./dist/all.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
-    <title>Dashboard | Tailwind Admin</title>
+    <title>Dashboard</title>
 </head>
 
 <body>
@@ -58,74 +58,68 @@
                         </a>
                     </li>
                     <li class="w-full h-full py-3 px-2 border-b border-light-border">
-                        <a href="forms.html"
+                        <a href="FormPemesan.html"
                            class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
                             <i class="fab fa-wpforms float-left mx-2"></i>
-                            Forms
+                            Form Penginputan Data Pemesan
                             <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
                     </li>
                     <li class="w-full h-full py-3 px-2 border-b border-light-border">
-                        <a href="buttons.html"
+                        <a href="FormKendaraan.html"
                            class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                            <i class="fas fa-grip-horizontal float-left mx-2"></i>
-                            Buttons
+                            <i class="fab fa-wpforms float-left mx-2"></i>
+                            Form Penginputan Data Kendaraan
                             <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
                     </li>
                     <li class="w-full h-full py-3 px-2 border-b border-light-border">
-                        <a href="tables.html"
+                        <a href="FormPegawai.html"
+                           class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
+                            <i class="fab fa-wpforms float-left mx-2"></i>
+                            Form Penginputan Data Pegawai
+                            <span><i class="fa fa-angle-right float-right"></i></span>
+                        </a>
+                    </li>
+                    <li class="w-full h-full py-3 px-2 border-b border-light-border">
+                        <a href="FormTiket.html"
+                           class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
+                            <i class="fab fa-wpforms float-left mx-2"></i>
+                            Form Pemesanan Tiket
+                            <span><i class="fa fa-angle-right float-right"></i></span>
+                        </a>
+                    </li>
+                    <li class="w-full h-full py-3 px-2 border-b border-light-border">
+                        <a href="TabelPemesan.html"
                            class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
                             <i class="fas fa-table float-left mx-2"></i>
-                            Tables
+                            Tabel Data Pemesan
                             <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
                     </li>
                     <li class="w-full h-full py-3 px-2 border-b border-light-border">
-                        <a href="ui.html"
+                        <a href="TabelKendaraan.html"
                            class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                            <i class="fab fa-uikit float-left mx-2"></i>
-                            Ui components
+                            <i class="fas fa-table float-left mx-2"></i>
+                            Tabel Data Kendaraan
                             <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
                     </li>
-                    <li class="w-full h-full py-3 px-2 border-b border-300-border">
-                        <a href="modals.html" class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                            <i class="fas fa-square-full float-left mx-2"></i>
-                            Modals
+                    <li class="w-full h-full py-3 px-2 border-b border-light-border">
+                        <a href="TabelPegawai.html"
+                           class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
+                            <i class="fas fa-table float-left mx-2"></i>
+                            Tabel Data Pegawai
                             <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
                     </li>
-                    <li class="w-full h-full py-3 px-2">
-                        <a href="#"
+                    <li class="w-full h-full py-3 px-2 border-b border-light-border">
+                        <a href="TabelTiket.html"
                            class="font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                            <i class="far fa-file float-left mx-2"></i>
-                            Pages
-                            <span><i class="fa fa-angle-down float-right"></i></span>
+                            <i class="fas fa-table float-left mx-2"></i>
+                            Tabel Data Pemesanan Tiket
+                            <span><i class="fa fa-angle-right float-right"></i></span>
                         </a>
-                        <ul class="list-reset -mx-2 bg-white-medium-dark">
-                            <li class="border-t mt-2 border-light-border w-full h-full px-2 py-3">
-                                <a href="login.html"
-                                   class="mx-4 font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                                    Login Page
-                                    <span><i class="fa fa-angle-right float-right"></i></span>
-                                </a>
-                            </li>
-                            <li class="border-t border-light-border w-full h-full px-2 py-3">
-                                <a href="register.html"
-                                   class="mx-4 font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                                    Register Page
-                                    <span><i class="fa fa-angle-right float-right"></i></span>
-                                </a>
-                            </li>
-                            <li class="border-t border-light-border w-full h-full px-2 py-3">
-                                <a href="404.html"
-                                   class="mx-4 font-sans font-hairline hover:font-normal text-sm text-nav-item no-underline">
-                                    404 Page
-                                    <span><i class="fa fa-angle-right float-right"></i></span>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
 
